Open Mobile pilot without interactive login
